log
Sat 30 Mar 2024 02:49:02 AM UTC: 
 tests:  0|6
total_score: 0/70
748317d
Sat 30 Mar 2024 02:57:28 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
07ebde1
Sat 30 Mar 2024 03:02:23 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a7dc890
Sat 30 Mar 2024 03:03:34 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
7869b04
Sat 30 Mar 2024 03:05:46 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
2ce2b47
Sat 30 Mar 2024 03:07:57 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8442378
Sat 30 Mar 2024 03:09:27 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
91ceeff
Sat 30 Mar 2024 03:13:04 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8155adb
Sat 30 Mar 2024 09:22:28 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
ca247e2
Sat 30 Mar 2024 09:24:04 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:67:37: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   67 |   if (list->current == NULL) return NULL;
      |                                     ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5729d26
Sat 30 Mar 2024 09:25:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
27a1380
Sat 30 Mar 2024 09:25:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a2fcf27
Sat 30 Mar 2024 10:18:19 PM UTC: 
 list.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:66:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   66 |   Node* nuevo = createNode(data);
      |         ^~~~~
list.c: In function ‘popCurrent’:
list.c:91:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   91 |   Node* aux = list->current;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
9b1972a
Sat 30 Mar 2024 10:18:35 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
49d672b
Sat 30 Mar 2024 10:18:52 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
c7229b7
Sat 30 Mar 2024 10:21:47 PM UTC: 
 list.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
84e4643
Sat 30 Mar 2024 10:22:52 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
405400f
Sat 30 Mar 2024 10:23:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
42be518
Sat 30 Mar 2024 10:24:15 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
4301228
Sat 30 Mar 2024 10:32:23 PM UTC: 
 list.c | 19 +++++++------------
 1 file changed, 7 insertions(+), 12 deletions(-)
 tests:  10|2
total_score: 45/70
512afaf
Sat 30 Mar 2024 11:15:09 PM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  11|1
total_score: 55/70
f7ac490
